@@ -405,6 +405,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   further parsing (<ref>-style). There should no longer be surprise
   expansion of foreign extensions inside HTML output, or differences
   in behavior based on the order tags are loaded.
+* (bug 885) Pre-save transform no longer silently appends close tags
+* Pre-save transform no longer changes the case of close tags
 
 
 == Compatibility ==
